# horde-safety

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  example.py  pyproject.toml  requirements.dev.txt  requirements.txt  tox.ini
.github/workflows/: maintests.yml  prtests.yml  release.yml
horde_safety/: __init__.py  csam_checker.py  deep_danbooru_model.py  horde_safety_checker.py  interrogate.py  nsfw_checker_class.py  utils.py
tests/: conftest.py  test_csam_checker.py  test_interrogate_manager.py  test_nsfw_checker_class.py
