[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "horde_safety"
# version = "0.2.4"
description = "Provides some of the tools the AI Horde uses for safety."
authors = [
    {name = "db0", email = "mail@dbzer0.com"},
    {name = "tazlin", email = "tazlin.on.github@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]

dynamic=["dependencies", "version"]

[project.urls]
"Homepage" = "https://github.com/Haidra-Org/horde-safety/"
"Bug Tracker" = "https://github.com/Haidra-Org/horde-safety/issues"
# "Changelog" = ""

[tool.setuptools]
license-files = ["LICENSE", "CHANGELOG*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.package-dir]
horde_safety = "horde_safety"

[tool.black]
line-length = 119

[tool.ruff]
line-length=119
exclude=["build"]
ignore=[]
select = [
    "A",    # flake8-builtins
    "I",    # isort
    # "S",    # Bandit
    "F",    # pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings


    "YTT",  # flake8-2020
    # "BLE",    # flake8-blind-except
    # "B",    # flake8-bugbear
    "COM",  # flake8-commas
    "C4",   # flake8-comprehensions
    # "G",    # flake8-logging-format
    "INP",  # flake8-no-pep420
    "PIE",  # flake8-pie
    # "T20",  # flake8-print
    # "UP",   # pyupgrade
    "RSE",  # flake8-raise
    # "RET",  # flake8-return
    # "SLF",  # flake8-self
    # "SIM",  # flake8-simplify
    # "ARG",  # flake8-unused-arguments
    # "TRY",  # tryceratops
    "RUF100"
]
